# lambdacommon

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.sh  clean_workspace.sh  cleaningWorkspace.sh  test.sh
apercommon/: CMakeLists.txt
apercommon/include/apercommon/: apercommon.h  string.h
apercommon/include/apercommon/graphics/: color.h
apercommon/include/apercommon/system/: devices.h  os.h  terminal.h
apercommon/sources/system/: os.cpp
c_wrapper/: CMakeLists.txt
c_wrapper/include/clambdacommon/: clambdacommon.h  lstring.h  maths.h  resources.h  types.h
c_wrapper/include/clambdacommon/graphics/: color.h
c_wrapper/include/clambdacommon/maths/geometry/: point.h  point.h.in  vector.h  vector.h.in
c_wrapper/include/clambdacommon/system/: os.h  system.h  terminal.h  time.h
c_wrapper/src/: clambdacommon.cpp  lstring.cpp  maths.cpp  resources.cpp  time.cpp
c_wrapper/src/graphics/: color.cpp
c_wrapper/src/maths/geometry/: point.cpp.in  vector.cpp.in
c_wrapper/src/system/: os.cpp  system.cpp  terminal.cpp
c_wrapper/tests/: CMakeLists.txt  lambdacommon.rc  test.c
include/apercommon/: apercommon.h  string.h
include/apercommon/graphics/: color.h
include/apercommon/system/: os.h  terminal.h
include/apercommon/system/filesystem/: filesystem.h
include/lambdacommon/: cli_arguments.h  lambdacommon.h  lerror.h  lstring.h  maths.h  object.h  path.h  resources.h  serializable.h  sizes.h  string.h  test.h  types.h  utils.h
include/lambdacommon/connection/: address.h  url.h
include/lambdacommon/document/: document.h
include/lambdacommon/documents/: document.h
include/lambdacommon/exceptions/: exceptions.h
include/lambdacommon/graphics/: color.h  scene.h
include/lambdacommon/maths/: complex.h
include/lambdacommon/maths/geometry/: dimensions.h  geometry.h  point.h  vector.h
include/lambdacommon/system/: devices.h  fs.h  input.h  os.h  system.h  terminal.h  time.h  uri.h
include/lambdacommon/system/filesystem/: filesystem.h
include/lambdacommon/system/fs/: filesystem.h
resources/: lambdacommon.rc  lambdacommon_info.rc
src/: apercommon.cpp  cli_arguments.cpp  lambdacommon.cpp  lc_info.cpp  lstring.cpp  maths.cpp  object.cpp  path.cpp  resources.cpp  serializable.cpp  string.cpp  time.cpp  utils.cpp
src/connection/: address.cpp  url.cpp
src/graphics/: color.cpp  scene.cpp
src/system/: fs.cpp  os.cpp  system.cpp  terminal.cpp  time.cpp  uri.cpp
src/system/filesystem/: filesystem.cpp
src/system/fs/: filesystem.cpp
src/test/: CMakeLists.txt
tests/: CMakeLists.txt  lambdacommon.rc  test.cpp  travis_setup_linux.sh  travis_setup_osx.sh
